--- a/1206.md
+++ b/1206.md
@@ -11,3 +11,21 @@
 ## Day2, Day3, Day4
 看過後，覺得好像不是適合初入門的學習，決定當成每天學習時的休閒項目來看看
 
+
+----
+
+## 閱讀資料
+
+### [Bootstrap4 教程](http://www.runoob.com/bootstrap4/bootstrap4-tutorial.html)
+看起來比較多元件的介紹
+
+- 教程
+  - 基本的BS4 web: https://gist.github.com/maloyang/d24a3accf52321940ae203ec96d3476a
+  - 我把它放到gist中，這個[網頁](https://dotblogs.com.tw/rickyteng/2015/11/03/153786)中有提到可以使用gist配合bl.ocks.org變成網頁
+    - [看這邊](http://bl.ocks.org/maloyang/raw/d24a3accf52321940ae203ec96d3476a/)
+    - 但要把gist中把檔名存成index.html才行...XD
+
+### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
+六角學院的
+
+
