--- a/1206.md
+++ b/1206.md
@@ -25,6 +25,31 @@
     - [看這邊](http://bl.ocks.org/maloyang/raw/d24a3accf52321940ae203ec96d3476a/)
     - 但要把gist中把檔名存成index.html才行...XD
 
+- [安装使用](http://www.runoob.com/bootstrap4/bootstrap4-install.html)
+  - 二個安裝使用方式：(1)用Bootstrap 4 CDN、(2)下载 Bootstrap 4，和你的網頁放在一起
+  - Bootstrap 要求使用 HTML5
+  `
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8"> 
+  </head>
+</html>
+  `
+  - 移動設備優先
+  - 容器元素：.container 、.container-fluid
+  - Cloud Studio -->  腾讯提供的雲開發平台
+  
+- [網格系統](http://www.runoob.com/bootstrap4/bootstrap4-grid-basic.html)
+  - 最多12列
+  - class(類)的種類： --> .col就是螢幕小也不會疊，只併排；.col-sm在比較小螢幕時才疊；.col-lg在像筆電電種寬度pixel不足的，會一直都是疊著的
+    - .col- 針對所有設備
+    - .col-sm- 平板 - 屏幕寬度等於或大於 576px
+    - .col-md- 桌面顯示器 - 屏幕寬度等於或大於 768px)
+    - .col-lg- 大桌面顯示器 - 屏幕寬度等於或大於 992px)
+    - .col-xl- 超大桌面顯示器 - 屏幕寬度等於或大於 1200px)
+  - offset-*-* 如 <div class="col-md-4 offset-md-4 bg-warning">.col-md-4 .offset-md-4</div> 就是讓col-md-4的這一格要偏移4個後再顯示
+  
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
 六角學院的
 
