--- a/1206.md
+++ b/1206.md
@@ -50,6 +50,13 @@
     - .col-xl- 超大桌面顯示器 - 屏幕寬度等於或大於 1200px)
   - offset-*-* 如 <div class="col-md-4 offset-md-4 bg-warning">.col-md-4 .offset-md-4</div> 就是讓col-md-4的這一格要偏移4個後再顯示
   
+- [文字排版](http://www.runoob.com/bootstrap4/bootstrap4-typography.html)
+  - BS4預設的font-size=16px, line-height = 1.5
+  - BS4有重新定義<h1> - <h6>的大小 (比原來的大一點的感覺)
+  - BS4另提供更大的標題字型：display-1, .display-2, .display-3, .display-4
+  - small副標題可以得到比本來標題稍小一點的字型，如：<h1>h1 标题 <small>副标题</small></h1>
+  
+
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
 六角學院的
 
