--- a/1206.md
+++ b/1206.md
@@ -55,6 +55,42 @@
   - BS4有重新定義<h1> - <h6>的大小 (比原來的大一點的感覺)
   - BS4另提供更大的標題字型：display-1, .display-2, .display-3, .display-4
   - small副標題可以得到比本來標題稍小一點的字型，如：<h1>h1 标题 <small>副标题</small></h1>
+  - <mark> 可以讓文字有如黃色螢光筆畫過一樣
+  - <abbr> 可讓文字底部有虛線，如web address link一樣
+  - <blockquote> 看起來對文字電書的排版很有幫助
+  - <dl> 對於列示項目&說明的條列式排版很有幫助
+  `
+  <dl>
+    <dt>Coffee</dt>
+    <dd>- black hot drink</dd>
+    <dt>Milk</dt>
+    <dd>- white cold drink</dd>
+  </dl>     
+  `  
+  - <code> 顯示代碼片段
+  - <kbd> 顯示由keyboard輸入的內容也明確定義出來了
+  - <pre> BS4對這個tag也重新定義過了
+  
+----
+### 1207筆記
+
+- [颜色](http://www.runoob.com/bootstrap4/bootstrap4-colors.html)
+  - 在BS4中已對一些基本的色塊有定義了
+  - 對文字：
+    - text-success
+    - text-info
+    - text-warning
+    - text-danger
+  - 對背景色
+    - bg-success
+    - bg-info
+    - bg-warning
+    - bg-danger
+
+- [表格](http://www.runoob.com/bootstrap4/bootstrap4-tables.html)
+  - BS4定義了很多table style，做table時比之前純用html的好看很多，也少寫很多東西
+  - [demo code](https://gist.github.com/maloyang/c4a621bdfb701482b1c1a4785da65ee4)
+  
   
 
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
