--- a/1206.md
+++ b/1206.md
@@ -91,7 +91,16 @@
   - BS4定義了很多table style，做table時比之前純用html的好看很多，也少寫很多東西
   - [demo code](https://gist.github.com/maloyang/c4a621bdfb701482b1c1a4785da65ee4)
   
+- [图像形状](http://www.runoob.com/bootstrap4/bootstrap4-images.html)
+  - 看過就好…不同的框，class="img-fluid"可以圖片響應式(自動縮放)
   
+- [信息提示框](http://www.runoob.com/bootstrap4/bootstrap4-alerts.html)
+  - 以「class="alert alert-success"」可以顯示效果不錯的提示框
+  - 「alert-dismissible」、「<button type="button" class="close" data-dismiss="alert">&times;</button>」可以實作關閉鈕
+  - .fade 和 .show 可以達成淡入、淡出的效果
+  
+  
+
 
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
 六角學院的
