--- a/1206.md
+++ b/1206.md
@@ -99,7 +99,10 @@
   - 「alert-dismissible」、「<button type="button" class="close" data-dismiss="alert">&times;</button>」可以實作關閉鈕
   - .fade 和 .show 可以達成淡入、淡出的效果
   
-  
+- [按钮](http://www.runoob.com/bootstrap4/bootstrap4-buttons.html)  
+
+- [連在一起的按鈕](http://www.runoob.com/bootstrap4/bootstrap4-button-groups.html)
+
 
 
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
