--- a/1206.md
+++ b/1206.md
@@ -103,6 +103,17 @@
 
 - [連在一起的按鈕](http://www.runoob.com/bootstrap4/bootstrap4-button-groups.html)
 
+----
+### 1213筆記
+- [徽章](http://www.runoob.com/bootstrap4/bootstrap4-badges.html)
+  - Badges, 多用來標示 新的 或是 未讀 的項目
+
+- [進度條](http://www.runoob.com/bootstrap4/bootstrap4-progressbars.html)
+  - 各種不同的進度條做法
+  
+- [分頁](http://www.runoob.com/bootstrap4/bootstrap4-pagination.html)
+  - 分頁(page-item)、面包屑分頁(breadcrumb-item) --> 真奇妙的命名
+  
 
 
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
