--- a/1206.md
+++ b/1206.md
@@ -114,6 +114,15 @@
 - [分頁](http://www.runoob.com/bootstrap4/bootstrap4-pagination.html)
   - 分頁(page-item)、面包屑分頁(breadcrumb-item) --> 真奇妙的命名
   
+----
+### 1214筆記
+- [列表组](http://www.runoob.com/bootstrap4/bootstrap4-list-groups.html)
+  - 常用項目! 要記著
+  
+- [卡片](http://www.runoob.com/bootstrap4/bootstrap4-cards.html)
+  
+- [下拉選單](http://www.runoob.com/bootstrap4/bootstrap4-dropdowns.html)
+
 
 
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
