--- a/1206.md
+++ b/1206.md
@@ -123,7 +123,17 @@
   
 - [下拉選單](http://www.runoob.com/bootstrap4/bootstrap4-dropdowns.html)
 
-
+----
+### 1217筆記
+- [折疊](http://www.runoob.com/bootstrap4/bootstrap4-collapse.html)
+  - 這也是很常用的功能，一定要學起來來
+  
+- [導航](http://www.runoob.com/bootstrap4/bootstrap4-navs.html)
+  - 最後面說的動態選項卡 比較像我需要的東西
+  
+- [導航欄](http://www.runoob.com/bootstrap4/bootstrap4-navbar.html)
+  - 這邊就有說明BS4 template那種使用toggle的menu button，可以參考，但還看不太懂
+  
 
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
 六角學院的
