--- a/1206.md
+++ b/1206.md
@@ -134,6 +134,15 @@
 - [導航欄](http://www.runoob.com/bootstrap4/bootstrap4-navbar.html)
   - 這邊就有說明BS4 template那種使用toggle的menu button，可以參考，但還看不太懂
   
+### 1218筆記
+- [表單](http://www.runoob.com/bootstrap4/bootstrap4-forms.html)
+  - 只介紹二個簡單的form
+  
+- [表單控件](http://www.runoob.com/bootstrap4/bootstrap4-forms-inputs.html)
+  - text, checkbox, optionbox, listbox等基本輸入元素
+  
+- [输入框组](http://www.runoob.com/bootstrap4/bootstrap4-forms-input-group.html)
+
 
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
 六角學院的
