--- a/1206.md
+++ b/1206.md
@@ -143,6 +143,22 @@
   
 - [输入框组](http://www.runoob.com/bootstrap4/bootstrap4-forms-input-group.html)
 
+### 1220筆記
+- [輪播](http://www.runoob.com/bootstrap4/bootstrap4-carousel.html)
+  - 很好用的功能，有幾個class要特別記著：
+    - .carousel: 即建立一個輪播
+    - .carousel-indicators: 加入指示符，即輪播圖下方的小符號 (這邊沒提到，如果少於圖片數不知道會如何)
+    - .carousel-inner: 用來加入要切換的圖片
+    - .carousel-item: 用來條列出一個圖片的內容(指向哪邊)
+    - .carousel-control-prev: 加入左側，回上一張圖的箭頭
+    - .carousel-control-next: 加入右側，回上一張圖的箭頭
+    - .slide: 加入左右滑動的效果
+- [模態框](http://www.runoob.com/bootstrap4/bootstrap4-modal.html)
+  - 還不知道什麼時候會使用
+  
+- [提示框](http://www.runoob.com/bootstrap4/bootstrap4-tooltip.html)
+  - 就是tooltip功能
+  
 
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
 六角學院的
