--- a/1206.md
+++ b/1206.md
@@ -159,6 +159,18 @@
 - [提示框](http://www.runoob.com/bootstrap4/bootstrap4-tooltip.html)
   - 就是tooltip功能
   
+### 1222筆記
+- [彈出框](http://www.runoob.com/bootstrap4/bootstrap4-popover.html)
+
+- [滾動監聽](http://www.runoob.com/bootstrap4/bootstrap4-scrollspy.html)
+  - 可以達到nav item和內容的同步，即滾到某個段落時，上面的nav-bar中的項目也要跟到相對的項目
+  
+- [小工具](http://www.runoob.com/bootstrap4/bootstrap4-utilities.html)
+  - 一些經由簡單設定就能用，不用自己再寫很多css的東西
+  
+- [flex彈性佈局](http://www.runoob.com/bootstrap4/bootstrap4-flex.html)
+
+
 
 ### [Bootstrap4繁體中文手冊](https://bootstrap.hexschool.com/)
 六角學院的
